Creative Project Revision-3

--- a/about/about.html
+++ b/about/about.html
@@ -33,9 +33,9 @@
             <li><a href="../templates/temp-4.html"><span class="label">Warmth Feelings</span></a></li>
         </div>
         <div class="settings">
-            <li><a>links</a></li>
-            <li><a>dates</a></li>
-            <li><a>settings</a></li>
+            <li><a href="https://mail.google.com"><i class="fas fa-envelope"></i></a></li>
+            <li><a href="https://www.facebook.com/rowwnyy"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://twitter.com/rowwwnnniiy"><i class="fab fa-twitter"></i></a></li>
         </div>
     </ul>
 </nav>
@@ -50,8 +50,8 @@
                 <div class="author">
                     <div class="pic"><img src="../images/ron.jpg.jpg" alt="pic"></div>
                 </div>
-                <p>Ron Bryan Vertudes is a 3rd yr BS Computer Science student at the University of the Philippines Mindanao. The 21-year old student is currently residing at Panabo City, Davao del Norte. You can contact him at rmvertudes@up.edu.ph or through
-                    the cellphone number (+63) 946 804 2064.</p>
+                <p>Ron Bryan Vertudes is a 3rd year BS Computer Science student at the University of the Philippines Mindanao. He is 21 years of age and currently residing at Panabo City, Davao del Norte, Philippines. You can contact him through email rmvertudes@up.edu.ph
+                    or cellphone number (+63) 946 804 2064.</p>
             </div>
         </div>
     </div>
