--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <li><a href="templates/temp-4.html"><span class="label">Warmth Feelings</span></a></li>
         </div>
         <div class="settings">
-            <li><a>links</a></li>
-            <li><a>dates</a></li>
-            <li><a>settings</a></li>
+            <li><a href="https://mail.google.com"><i class="fas fa-envelope"></i></a></li>
+            <li><a href="https://www.facebook.com/rowwnyy"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://twitter.com/rowwwnnniiy"><i class="fab fa-twitter"></i></a></li>
         </div>
     </ul>
 </nav>
@@ -45,7 +45,14 @@
         <div class="header">
             <h1>Dashboard</h1>
         </div>
-        <h2 style="font-size: 30px;">Collections</h2>
+        <div class="hero-2">
+            <div class="component-one">
+                <h2>About Poetry World</h2>
+                <p>Poetry World is a website of a collection of poems. The author believes that through writing poems, we can convey our emotions and unspoken words into expressive lines. It uses symbolism and metaphors to describe what we wanted to say.
+                    Henceforth, this webpage produces several poem pieces that would also awaken others' perceptions of what art is. It also appreciates and promotes the surprisingly creative and imaginative meaning of poems. </p>
+            </div>
+        </div>
+        <h2>Collections</h2>
         <div class="hero">
             <div class="component-1">
                 <a href="templates/temp-1.html">
@@ -73,13 +80,13 @@
             </div>
         </div>
         <div class="hero-2">
-            <div class="component">
+            <div class="component-two">
                 <div class="author">
                     <div class="pic"><img src="images/ron.jpg.jpg" alt="pic"></div>
                 </div>
                 <h2>About the Author</h2>
-                <p>Ron Bryan Vertudes is a 3rd yr BS Computer Science student at the University of the Philippines Mindanao. The 21-year old student is currently residing at Panabo City, Davao del Norte. You can contact him at rmvertudes@up.edu.ph or through
-                    the cellphone number (+63) 946 804 2064.</p>
+                <p>Ron Bryan Vertudes is a 3rd year BS Computer Science student at the University of the Philippines Mindanao. He is 21 years of age and currently residing at Panabo City, Davao del Norte, Philippines. You can contact him through email rmvertudes@up.edu.ph
+                    or cellphone number (+63) 946 804 2064.</p>
             </div>
         </div>
     </div>
